2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/container.txi: Add undocumented nfields to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/poly.txi: Add undocumented ppder, ppint, ppjumps
	functions to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add undocumented matlabroot to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/linalg.txi: Add undocumented svd_driver to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/arith.txi: Add undocumented cbrt to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/arith.txi: Add undocumented erfcx to documentation.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* Update copyright notices for 2011.

2011-01-12  Rik  <octave@nomad.inbox5.com>

	* interpreter/basics.txi: Add <BACKSPACE> to cursor movement section.

2011-01-12  John W. Eaton  <jwe@octave.org>

	* interpreter/basics.txi (Commands For History):
	Document history_control.

2011-01-10  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Konstantinos Poulios to the list.

2011-01-10  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* interpreter/diagperm.txi: Remove Matlab euphemism.
	* interpreter/dynamic.txi: Ditto. Also use @file macro for a
	couple of filenames.

2011-01-10  John W. Eaton  <jwe@octave.org>

	* interpreter/container.txi (Basic Usage and Examples):
	Document print_struct_array_contents.

2011-01-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi: Put statistics detailmenu in correct order.

2011-01-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/numbers.txi, interpreter/obsolete.txi,
	interpreter/oop.txi, interpreter/stats.txi: Use @headitem macro to
	create column heads for @multitable entries.

2011-01-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/grammar.txi: Update list of keywords in grammar.

2011-01-05  John W. Eaton  <jwe@octave.org>
