@@ -1,5 +1,9 @@
 2011-01-14  Rik  <octave@nomad.inbox5.com>
 
+	* ploynomial/polyaffine.m: Improve docstring.
+
+2011-01-14  Rik  <octave@nomad.inbox5.com>
+
 	* general/interp1.m, general/interp2.m, polynomial/mkpp.m,
 	polynomial/pchip.m, polynomial/ppder.m, polynomial/ppint.m,
 	polynomial/ppjumps.m, polynomial/ppval.m, polynomial/spline.m,
