@@ -1,5 +1,10 @@
 2011-01-14  Rik  <octave@nomad.inbox5.com>
 
+	* interpreter/octave.texi, interpreter/poly.txi: Add undocumented 
+	polyaffine to documentation.
+
+2011-01-14  Rik  <octave@nomad.inbox5.com>
+
 	* interpreter/container.txi: Add undocumented nfields to documentation.
 
 2011-01-14  Rik  <octave@nomad.inbox5.com>
